# test_makby

./: .gitignore  CMakeLists.txt  README.md  output_patterns.gcode
include/: GCodeGenerator.hpp  GeometryProcessor.hpp
include/core/: Types.hpp
include/patterns/: ConcentricPattern.hpp  HoneycombPattern.hpp  IPattern.hpp  PatternGenerator.hpp  RectilinearPattern.hpp  SpiralPattern.hpp
scripts/: visualize_gcode.py
src/: GCodeGenerator.cpp  GeometryProcessor.cpp  main.cpp
src/patterns/: ConcentricPattern.cpp  HoneycombPattern.cpp  IPattern.cpp  RectilinearPattern.cpp  SpiralPattern.cpp
